--- a/.storybook/tsconfig.json
+++ b/.storybook/tsconfig.json
@@ -1,17 +1,15 @@
 {
-  "extends": "../tsconfig.json",
+  "extends": "../tsconfig.app.json",
   "compilerOptions": {
     "types": [
       "node"
     ]
   },
   "exclude": [
-    "../src/test.ts",
-    "../src/**/*.spec.ts",
+    "../projects/test.ts",
     "../projects/**/*.spec.ts"
   ],
   "include": [
-    "../src/**/*",
     "../projects/**/*"
   ],
   "files": [
